syntax="proto3";
package Networking.Protocols.Protobuf;

message Child {
	int32 id = 1;
	string name = 2;
	int32 age = 3;
	int32 idEvent1 = 4;
	int32 idEvent2 = 5;
} 

message Admin {
	string id = 1;
	string password = 2;
}

message Event {
	int32 id = 1;
	int32 ageMin = 2;
	int32 ageMax = 3;
	int32 distance = 4;
	int32 no = 5;
}
